--- a/translations/errors.es.yml
+++ b/translations/errors.es.yml
@@ -1,3 +1,3 @@
 es:
   users.existing_user: Ya existe un usuario registrado con este email.
-  users.auth.unauthorized: Usuario o contraseña erroneas.
+  users.auth.unauthorized: Usuario o contraseña incorectos.
