--- a/app/translations/errors.es.yml
+++ b/app/translations/errors.es.yml
@@ -2,7 +2,7 @@ es:
   users:
     auth:
       unauthorized: Usuario o contraseña incorectos.
-    existing_user: Ya existe un usuario registrado con este email.
+    existing_user: Ya existe un usuario registrado con este email. Si no olvisdaste tu contraseña no te preocupes, puedes iniciar el proceso de recuperación.
     not_found: Lo sentimos no existe un usuario registrado, por favor verifica los datos e intenta nuevamente.
     recovery_password:
       invalid_token: El token que intenta usar no es válido o ya ha sido usado. Puedes recuperar tu contraseña iniciando el proceso nuevamente.
